@@ -2,6 +2,7 @@
 === 4.9.1 (to be released)
 * fixed bug where disabled input fields were not handled properly by setValue()
 * fixed behaviour of setFastValue, which caused blur event to be ignored
+* #654 fixed ClassCastException in WebDriverFactory#logBrowserVersion()
 
 === 4.9 (released 20.12.2017)
 * #638 upgrade to selenium-java:3.8.1  -- thanks to Aleksandr Rasolka
